--- a/Book/src/templates/scaffolding/renderEditor.template
+++ b/Book/src/templates/scaffolding/renderEditor.template
@@ -139,14 +139,27 @@
         def sw = new StringWriter()
         def pw = new PrintWriter(sw)
         pw.println()
-        pw.println '<ul class="one-to-many">'
-        pw.println "<g:each in=\"\${${domainInstance}?.${property.name}?}\" var=\"${property.name[0]}\">"
-        pw.println "    <li><g:link controller=\"${property.referencedDomainClass.propertyName}\" action=\"show\" id=\"\${${property.name[0]}.id}\">\${${property.name[0]}?.encodeAsHTML()}</g:link></li>"
-        pw.println '</g:each>'
-		pw.println '<li class="add">'
+        pw.println '<div class="one-to-many">'
+
+	// add link
+	pw.println '<div class="row add">'
+	pw.println '<div class="col-sm-2 margin-bottom-10 add">'
         pw.println "<g:link controller=\"${property.referencedDomainClass.propertyName}\" action=\"create\" params=\"['${domainClass.propertyName}.id': ${domainInstance}?.id]\">\${message(code: 'default.add.label', args: [message(code: '${property.referencedDomainClass.propertyName}.label', default: '${property.referencedDomainClass.shortName}')])}</g:link>"
-		pw.println '</li>'
-        pw.println '</ul>'
+	pw.println '</div>'
+	pw.println '</div>'
+
+	// list of item
+	pw.println '<table class="table table-hover table-condensed">'
+        pw.println "<g:each in=\"\${${domainInstance}?.${property.name}?}\" var=\"${property.name[0]}\">"
+	pw.println '<tr>'
+	pw.println '<td>'
+        pw.println "<g:link controller=\"${property.referencedDomainClass.propertyName}\" action=\"show\" id=\"\${${property.name[0]}.id}\">\${${property.name[0]}?.encodeAsHTML()}</g:link>"
+	pw.println '</td>'
+	pw.println '</tr>'
+        pw.println '</g:each>'
+	pw.println '</table>'
+
+        pw.println '</div>'
         return sw.toString()
     }
 
